# ibkr-bot-01

./: .gitignore  BASELINE_AUDIT.md  BUILD_DASHBOARD.md  CALIBRATION_FIELDS.md  CANCEL_FLOW.md  DASHBOARD_STATE_SOURCE.md  DOCS_SYNC.md  DRY_RUN_PLAN.md  DRY_RUN_RESULTS.md  IPC_CONTRACT.md  LIVE_BLOCKERS.md  MTF_WIRING.md  Makefile  NETWORK_EXPOSURE.md  PDT_FIX.md  README.md  REPLAYER.md  SCHEMA_INVARIANTS.md  SECURITY_HARDENING.md  TESTING_MATRIX.md  TRADE_ACCOUNTING.md  WATCHLIST_LIFECYCLE.md  revert.diff  run_scenarios.py
.github/workflows/: rust.yml
Guidance and direction/: Robust_Penny_Scalper_v7_10_CANONICAL_FINAL (1).html
configs/: blocklist.toml  calendar.toml  config_changelog.toml  default.toml
configs/locales/: ar.ftl  en.ftl
dashboard/: index.html
docs/: README.md
fixtures/ipc/: invalid_cancel_order.msgpack  invalid_enum_order.msgpack  invalid_event.msgpack  invalid_fill.msgpack  invalid_l2delta.msgpack  invalid_new_order.msgpack  invalid_snapshot.msgpack  invalid_tick.msgpack  invalid_timestamp_tick.msgpack  valid_cancel_ack.msgpack  valid_cancel_order.msgpack  valid_cancel_reject.msgpack  valid_event.msgpack  valid_fill.msgpack  valid_heartbeat.msgpack  valid_l2delta.msgpack  valid_new_order.msgpack  valid_order_status.msgpack  valid_reject.msgpack  valid_snapshot.msgpack  valid_tick.msgpack
logs/: README.md
proto/: schema.fbs
python/: generate_ipc_fixtures.py  integration_tests.py  pyproject.toml
python/rps_bridge/: __init__.py  encoder.py  health.py  ibkr_client.py  uds_sender.py
rust/: Cargo.toml
rust/bins/replayer/: Cargo.toml
rust/bins/replayer/src/: main.rs
rust/bins/replayer/tests/: integration_test.rs  out1.json  out_altered.json  sample_data.csv
rust/bins/rpsd/: Cargo.toml
rust/bins/rpsd/src/: dashboard.rs  main.rs
rust/crates/app_runtime/: Cargo.toml
rust/crates/app_runtime/src/: lib.rs
rust/crates/bridge_rx/: Cargo.toml
rust/crates/bridge_rx/src/: cmd_sender.rs  lib.rs
rust/crates/bridge_rx/tests/: cross_language_integration.rs
rust/crates/context_engine/: Cargo.toml
rust/crates/context_engine/src/: lib.rs
rust/crates/core_types/: Cargo.toml
rust/crates/core_types/src/: config.rs  datetime.rs  datetime_tests.rs  ipc_tests.rs  lib.rs  locale.rs  time_buffer.rs  trade_accounting.rs
rust/crates/core_types/tests/: ipc_invariants_test.rs
rust/crates/event_bus/: Cargo.toml
rust/crates/event_bus/src/: lib.rs
rust/crates/execution_engine/: Cargo.toml
rust/crates/execution_engine/src/: lib.rs
rust/crates/metrics_observability/: Cargo.toml
rust/crates/metrics_observability/src/: calibration_tests.rs  lib.rs
rust/crates/mtf_engine/: Cargo.toml
rust/crates/mtf_engine/src/: lib.rs
rust/crates/regime_engine/: Cargo.toml
rust/crates/regime_engine/src/: lib.rs
rust/crates/risk_engine/: Cargo.toml
rust/crates/risk_engine/src/: blocklist.rs  calendar.rs  exposure.rs  guards.rs  lib.rs  pdt.rs  pdt_tests.rs  session.rs  sizing.rs
rust/crates/tape_engine/: Cargo.toml
rust/crates/tape_engine/src/: lib.rs
rust/crates/watchlist_engine/: Cargo.toml
rust/crates/watchlist_engine/src/: lib.rs
