[workspace]
resolver = "2"

members = [
    "bins/replayer",
    "bins/rpsd",
    "crates/app_runtime",
    "crates/bridge_rx",
    "crates/context_engine",
    "crates/core_types",
    "crates/event_bus",
    "crates/execution_engine",
    "crates/metrics_observability",
    "crates/mtf_engine",
    "crates/regime_engine",
    "crates/risk_engine",
    "crates/tape_engine",
    "crates/watchlist_engine",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
log = "0.4"
# Add other dependencies here
