[package]
name = "rpsd"
version = "0.1.0"
edition = "2021"

[features]
paper_mode = ["app_runtime/paper_mode"]

[dependencies]
app_runtime = { path = "../../crates/app_runtime" }
core_types = { path = "../../crates/core_types" }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = "0.10"
toml = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde_json = "1"
