[package]
name = "app_runtime"
version = "0.1.0"
edition = "2021"

[features]
paper_mode = []

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
log = { workspace = true }
core_types = { path = "../core_types" }
event_bus = { path = "../event_bus" }
bridge_rx = { path = "../bridge_rx" }
watchlist_engine = { path = "../watchlist_engine" }
tape_engine = { path = "../tape_engine" }
risk_engine = { path = "../risk_engine" }
execution_engine = { path = "../execution_engine" }
metrics_observability = { path = "../metrics_observability" }
regime_engine = { path = "../regime_engine" }
context_engine = { path = "../context_engine" }
mtf_engine = { path = "../mtf_engine" }
arc-swap = "1.6"
arrayvec = "0.7"
anyhow = "1"
