[package]
name = "bridge_rx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
rmp-serde = "1.3.1"
log = { workspace = true }
core_types = { path = "../core_types" }
event_bus = { path = "../event_bus" }
scopeguard = "1.2.0"
arrayvec = { version = "0.7" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time"] }
