[package]
name = "core_types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
arrayvec = { version = "0.7", features = ["serde"] }
chrono = { workspace = true, optional = false }
chrono-tz = { workspace = true, optional = false }

[dev-dependencies]
toml = { workspace = true }
