[package]
name = "risk_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
core_types = { path = "../core_types" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.8"
toml.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3.8"
